--- a/docs/Incarceration.Rmd
+++ b/docs/Incarceration.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r source, include=F, echo=F}
+library(lintr)
 library(dplyr)
 library(tidyr)
 library(stringr)
@@ -37,7 +38,7 @@ Throughout history, POC have been targeted by police enforcement through bias, r
 12. white_pop_15to64
 13. total_pop_15to64
 
-*About the variables*:
+***About the variables*****:**
 
 Variables ***1 - 3*** provide insight as to when and where the incarcerations have happened. Variables ***4 - 8*** represent jail *and* prison populations of each state/county. I calculated those by adding their jail populations and their prison population, and called it incarceration population. For variable ***9***, I added together all of the *race*\_incarceration_pop that was not white to get total POC. This variable allows me to compare poc_incarceration_pop to that of white_incarceration_pop. Variable ***10*** provides me with total incarceration population total in each state. Lastly, variables ***11 - 13*** allow me to make a ratio of the amount of people incarcerated in a state to the amount of people incarcerated in a certain demographic.
 
@@ -45,14 +46,14 @@ Variables ***1 - 3*** provide insight as to when and where the incarcerations ha
 
 ```{r , include = F, echo = F}
 highest_total_incarceration0 <- highest_total_incarceration
-current_highest_incarceration_rate0 <- current_highest_incarceration_rate
-current_lowest_incarceration_rate0<- current_lowest_incarceration_rate
+current_highest_incarceration0 <- current_highest_incarceration
+current_lowest_incarceration0<- current_lowest_incarceration
 current_state_highest0 <- current_state_highest
-current_highest_group_in_highest_state0 <- current_highest_group_in_highest_state
+current_highest_group0 <- current_highest_group
 highest_wa_county0 <- highest_wa_county
 ```
 
-The questions I decided to look into helped provide me with the information necessary to come to an understanding as to how POC are treated compared to White people. While I do define POC as *any individual who is not white*, for this portion of the project, I wanted to know what racial demographic specifically is getting targeted. I first wanted to see which racial demographic was targeted to most ***throughout all of the years*** ***and all of the states***. That demographic came out to be the **`r highest_total_incarceration0`** . What this means is that black individuals have been targeted and incarcerated the most out of all the racial demographics. I then wanted to see which racial demographic is *currently*, which in this data set is *2016*, facing a higher amount of an incarceration population. That demographic came out to be the **`r current_highest_incarceration_rate0`**. This means that even now that the black community is facing a higher incarceration population in all of the states out of all of the races. Then, I wanted to see what racial demographic is *currently* not experiencing that same amount of incarceration. That demographic came out to be the **`r current_lowest_incarceration_rate0`** . From this we can conclude that the Asian/American, Pacific Islanders were not experiencing a high incarceration amount for their population in the most current year compared to the other racial demographics. From there, I was curious to see which state currently has the highest incarceration rate to population amount. I did this because obviously the bigger states will have the highest amount of incarceration because they are so large, so by calculating the ratio of people incarcerated to total population, I get a more accurate integer. I then concluded that **`r current_state_highest0`** has the highest incarceration rate. From there, I wanted to see whether POC or White people were more targeted in **`r current_state_highest0`** . With my calculations, it was determined that the **`r current_highest_group_in_highest_state0`** in the Texas were the most targeted.
+The questions I decided to look into helped provide me with the information necessary to come to an understanding as to how POC are treated compared to White people. While I do define POC as *any individual who is not white*, for this portion of the project, I wanted to know what racial demographic specifically is getting targeted. I first wanted to see which racial demographic was targeted to most ***throughout all of the years*** ***and all of the states***. That demographic came out to be the **`r highest_total_incarceration0`** . What this means is that black individuals have been targeted and incarcerated the most out of all the racial demographics. I then wanted to see which racial demographic is *currently*, which in this data set is *2016*, facing a higher amount of an incarceration population. That demographic came out to be the **`r current_highest_incarceration0`**. This means that even now that the black community is facing a higher incarceration population in all of the states out of all of the races. Then, I wanted to see what racial demographic is *currently* not experiencing that same amount of incarceration. That demographic came out to be the **`r current_lowest_incarceration0`** . From this we can conclude that the Asian/American, Pacific Islanders were not experiencing a high incarceration amount for their population in the most current year compared to the other racial demographics. From there, I was curious to see which state currently has the highest incarceration rate to population amount. I did this because obviously the bigger states will have the highest amount of incarceration because they are so large, so by calculating the ratio of people incarcerated to total population, I get a more accurate integer. I then concluded that **`r current_state_highest0`** has the highest incarceration rate. From there, I wanted to see whether POC or White people were more targeted in **`r current_state_highest0`** . With my calculations, it was determined that the **`r current_highest_group0`** in the Texas were the most targeted.
 
 ## Charts
 
